# numpy-matplotlib

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/notebooks/: learning.ipynb  test.ipynb
src/numpy/matplotlib/: intro.py
