[tool.poetry]
name = "numpy-matplotlib"
version = "0.1.0"
description = "Best for people who are using it for mathematical and statistical work."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
